--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "juancho-reservations",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Juan Andres Vega",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -17,14 +17,20 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate": "ts-node src/config/database/migration-tool.ts",
+    "migration:run": "pnpm build && pnpm typeorm migration:run -d ./dist/config/database/data.source.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
