--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:generate": "ts-node src/config/database/migration-tool.ts",
-    "migration:run": "pnpm build && pnpm typeorm migration:run -d ./dist/config/database/data.source.js"
+    "migration:run": "pnpm build && pnpm typeorm migration:run -d ./dist/config/database/data.source.js",
+    "db:seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed --configName 'src/config/database/seedConfig.ts'"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -31,7 +32,8 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
