fix(initial): improvement first commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "juancho-reservations",
+  "name": "routewise-api",
   "version": "0.0.1",
   "description": "",
   "author": "Juan Andres Vega",
