--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.7'
 services:
   postgres:
     image: postgres:13
-    container_name: postgres_db
+    container_name: routewise_db
     ports:
       - '5432:5432'
     environment:
-      POSTGRES_DB: reservations_db
-      POSTGRES_USER: reservations_user
-      POSTGRES_PASSWORD: reservations_password
+      POSTGRES_DB: routewise_db
+      POSTGRES_USER: routewise_user
+      POSTGRES_PASSWORD: routewise_password
     volumes:
       - postgres_data:/var/lib/postgresql/data
 volumes:
